mailing system initialized, data form Airtable now presented in the React Table

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,8 @@
-.App {
-  /* text-align: center; */
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +15,26 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+table {
+  border: 1px solid lightgray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+tbody {
+  border-bottom: 1px solid lightgray;
 }
+
+th, td {
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+  padding: 2px 4px;
+}
+
+tfoot {
+  color: gray;
+}
+
+tfoot th {
+  font-weight: normal;
+}
+
+
