--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -16,6 +10,7 @@
 
 table {
   border: 1px solid lightgray;
+  font-size: 22px;
 }
 
 tbody {
